--- a/index.html
+++ b/index.html
@@ -18,9 +18,30 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/screens.css">
+    <link rel="stylesheet" href="assets/css/effects.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
-    
+    <header id="header">
+        <div class="container">
+            <nav aria-label="Menu principal">
+                <a href="#" class="logo">Thales FF</a>
+                <button class="mn-mobile">
+                    <div class="mn-bar"></div>
+                    <div class="mn-bar"></div>
+                    <div class="mn-bar"></div>
+                </button>
+
+                <ul id="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre Min</a></li>
+                    <li><a href="#">Meus Trabalhos</a></li>
+                    <li><a href="#">Entre em contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <script src="assets/js/script.js" defer></script>
 </body>
 </html>
