Interface da hero area completa

--- a/index.html
+++ b/index.html
@@ -25,20 +25,34 @@
     <header id="header">
         <div class="container">
             <nav aria-label="Menu principal">
-                <a href="#" class="logo">Thales FF</a>
-                <button class="mn-mobile">
+                <a href="#" class="logo fade fade-bottom slow">Thales FF</a>
+                <button class="mn-mobile fade fade-bottom slow">
                     <div class="mn-bar"></div>
                     <div class="mn-bar"></div>
                     <div class="mn-bar"></div>
                 </button>
 
-                <ul id="menu">
+                <ul id="menu" class="fade fade-bottom slow">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Sobre Min</a></li>
+                    <li><a href="#">Sobre Mim</a></li>
                     <li><a href="#">Meus Trabalhos</a></li>
                     <li><a href="#">Entre em contato</a></li>
                 </ul>
             </nav>
+            <div class="hero-area">
+                <span class="fade fade-left medium">Olá eu sou</span>
+                <h1 class="fade fade-right slow">Thales Fernandes</h1>
+                <h2 class="gradient-color fade fade-left medium">Front-End Developer</h2>
+
+                <p class="fade fade-bottom medium">Com profissionalismo e confiança, 
+                construo projetos de alto desempenho, modernos, escaláveis e 
+                focados em gerar resultados reais.</p>
+
+                <div class="hero-cta">
+                    <a href="#" class="cta fade fade-left slow">Vamos conversar <span>></span></a>
+                    <a href="#" class="cta fade fade-right slow">Meus trabalhos<span>></span></a>
+                </div>
+            </div>
         </div>
     </header>
 
