Area sobre completa

--- a/index.html
+++ b/index.html
@@ -56,6 +56,35 @@
         </div>
     </header>
 
+    <section id="sobre">
+        <div class="container">
+            <div class="sobre-left">
+                <h2>Quem esta por trás do <span class="gradient-color">< codigo ></span> ?</h2>
+
+                <p>Muito prazer! Meu nome é Thales Fernandes, desenvolvedor Front-End focado em criar interfaces
+                modernas, responsivas e intuitivas, unindo design, performance e boas práticas de código.</p>
+
+                <p>Eu amo trabalhar com tecnologia e estou sempre buscando me aprimorar na área, 
+                além de me envolver em ambientes e com pessoas que proporcionem melhoria contínua, 
+                tanto para mim quanto para quem está ao meu redor.</p>
+                
+                <p>Atualmente, trabalho com tecnologias como HTML, CSS, JavaScript, Git e GitHub, e tenho uma 
+                base prática sólida na criação de landing pages e componentes interativos, como sliders 
+                e modais, usando código puro. Porém, esse é só o começo, estou sempre me desenvolvendo!</p>
+
+                <div class="sobre-ctaArea">
+                    <a href="#" class="cta">Meu curriculo</a>
+                    <a href="#" class="cta">Minhas Certificações</a>
+                </div>
+            </div>
+            <div class="sobre-right">
+                <div class="sobre-imgArea">
+                    <img src="assets/midia/Thales.png" alt="Thales Fernandes de Faria">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="assets/js/script.js" defer></script>
 </body>
 </html>
