hotfix/press-mobile

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                 <div class="hero-cta">
                     <a href="#" class="cta fade fade-left slow">Vamos conversar <span>></span></a>
-                    <a href="#" class="cta fade fade-right slow">Meus trabalhos<span>></span></a>
+                    <a href="#projetos" class="cta fade fade-right slow">Meus trabalhos<span>></span></a>
                 </div>
             </div>
         </div>
@@ -73,8 +73,8 @@
                 e modais, usando código puro. Porém, esse é só o começo, estou sempre me desenvolvendo!</p>
 
                 <div class="sobre-ctaArea">
-                    <a href="#" class="cta fade fade-left slow"">Meu curriculo</a>
-                    <a href="#" class="cta fade fade-right slow"">Minhas Certificações</a>
+                    <a href="#" class="cta fade fade-left slow">Meu curriculo</a>
+                    <a href="#" class="cta fade fade-right slow">Minhas Certificações</a>
                 </div>
             </div>
             <div class="sobre-right">
