Correção de erro no link do Whatsapp

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 focados em gerar resultados reais.</p>
 
                 <div class="hero-cta">
-                    <a href="https://w.app/thalesfernandesdev" target="_blank" rel="noopener noreferrer" class="cta fade fade-left slow">Vamos conversar <span>></span></a>
+                    <a href="https://wa.me/5531972307851?text=Ol%C3%A1%21%20Encontrei%20e%20me%20interessei%20pelo%20seu%20portf%C3%B3lio.%20Podemos%20falar%20melhor%20sobre%20um%20poss%C3%ADvel%20trabalho%3F" target="_blank" rel="noopener noreferrer" class="cta fade fade-left slow">Vamos conversar <span>></span></a>
                     <a href="#projetos" class="cta fade fade-right slow">Meus trabalhos<span>></span></a>
                 </div>
             </div>
@@ -243,7 +243,7 @@
                         Minhas redes
                     </div>
                     <div class="social-content">
-                        <a href="https://w.app/thalesfernandesdev" target="_blank" rel="noopener noreferrer" class="contato-social-item fade fade-left slow">
+                        <a href="https://wa.me/5531972307851?text=Ol%C3%A1%21%20Encontrei%20e%20me%20interessei%20pelo%20seu%20portf%C3%B3lio.%20Podemos%20falar%20melhor%20sobre%20um%20poss%C3%ADvel%20trabalho%3F" target="_blank" rel="noopener noreferrer" class="contato-social-item fade fade-left slow">
                             <span>Whatsapp</span>
                             <img src="assets/midia/whatsapp.png"  loading="lazy" alt="Link para o Whatsapp de Thales Fernandes">
                         </a>
