--- a/index.html
+++ b/index.html
@@ -182,6 +182,19 @@
                         <a href="" class="cta">Ver mais</a>
                     </div>
                 </article> 
+                <article  class="grid-item fade fade-top slow">
+                    <img src="assets/midia/projeto-3.png" 
+                        alt="Landing page para agencia de modelos" 
+                        data-url="https://github.com/Thalesffdev/projeto-landing"
+                        data-tech="HTML, CSS, JavaScript, Tailwind, TypeScript"
+                        loading="lazy">
+
+                    <div class="grid-item-thumb">
+                        <h3>Talentos que definem estilo</h3>
+                        <p>Landing page desenvolvida com foco em UI/UX e performance, aplicada a um contexto de agência de modelos. O projeto prioriza hierarquia visual clara, tipografia consistente e contraste adequado para reforçar legibilidade e escaneabilidade do conteúdo. A estrutura foi pensada para ser responsiva, modular e de fácil manutenção, permitindo reaproveitamento de componentes e adaptação do layout para diferentes contextos.</p>
+                        <a href="https://github.com/Thalesffdev/projeto-landing" target="_blank" rel="noopener noreferrer" class="cta">Ver mais</a>
+                    </div>
+                </article>
            </div>
 
            <div class="projetos-modal">
