Atualizando links de projetos

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <article  class="grid-item fade fade-top slow">
                     <img src="assets/midia/projeto1.png" 
                         alt="Miniatura do projeto Drag and Drop desenvolvido com HTML, CSS e JavaScript" 
-                        data-url="https://github.com/Thalesffdev/estudo-drag-and-drop"
+                        data-url="https://thalesffdev.github.io/estudo-drag-and-drop/"
                         data-tech="HTML, CSS, JavaScript"
                         loading="lazy"> 
 
@@ -185,14 +185,14 @@
                 <article  class="grid-item fade fade-top slow">
                     <img src="assets/midia/projeto-3.png" 
                         alt="Landing page para agencia de modelos" 
-                        data-url="https://github.com/Thalesffdev/projeto-landing"
+                        data-url="https://thalesffdev.github.io/langin-page-agenciaDeModelos/"
                         data-tech="HTML, CSS, JavaScript, Tailwind, TypeScript"
                         loading="lazy">
 
                     <div class="grid-item-thumb">
                         <h3>Talentos que definem estilo</h3>
                         <p>Landing page desenvolvida com foco em UI/UX e performance, aplicada a um contexto de agência de modelos. O projeto prioriza hierarquia visual clara, tipografia consistente e contraste adequado para reforçar legibilidade e escaneabilidade do conteúdo. A estrutura foi pensada para ser responsiva, modular e de fácil manutenção, permitindo reaproveitamento de componentes e adaptação do layout para diferentes contextos.</p>
-                        <a href="https://github.com/Thalesffdev/projeto-landing" target="_blank" rel="noopener noreferrer" class="cta">Ver mais</a>
+                        <a href="" target="_blank" rel="noopener noreferrer" class="cta">Ver mais</a>
                     </div>
                 </article>
            </div>
