Adicionando projeto customização que brilha

--- a/index.html
+++ b/index.html
@@ -195,6 +195,19 @@
                         <a href="" target="_blank" rel="noopener noreferrer" class="cta">Ver mais</a>
                     </div>
                 </article>
+                <article  class="grid-item fade fade-top slow">
+                    <img src="assets/midia/projeto-4.png" 
+                        alt="Landing page para venda de curso de pintura em tecidos da Nilda Rodrigues" 
+                        data-url="https://thalesffdev.github.io/nilda-rodrigues-prototipo"
+                        data-tech="HTML, CSS, JavaScript, Tailwind"
+                        loading="lazy">
+
+                    <div class="grid-item-thumb">
+                        <h3>Customização que brilha</h3>
+                        <p>Essa landing page foi concebida como uma página de alta conversão, onde estrutura técnica e construção visual trabalham juntas para conduzir o usuário até a decisão de compra de forma intuitiva e fluida.</p>
+                        <a href="" target="_blank" rel="noopener noreferrer" class="cta">Ver mais</a>
+                    </div>
+                </article>
            </div>
 
            <div class="projetos-modal">
